k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-home-app
  template:
    metadata:
      labels:
        app: smart-home-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: smart-home-app
          image: rupaldraft/smart-home-automation:1763318480
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
              ephemeral-storage: "256Mi"
            limits:
              memory: "512Mi"
