k8s/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shas-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shas-redis
  template:
    metadata:
      labels:
        app: shas-redis
    spec:
      automountServiceAccountToken: false   # Security: disable token mount

      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379


          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 30
            periodSeconds: 20

          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 15
            periodSeconds: 10


          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
              ephemeral-storage: "256Mi"
            limits:
              memory: "512Mi"
              ephemeral-storage: "512Mi"     # ← ADD THIS


          volumeMounts:
            - mountPath: /data
              name: redisdata

      volumes:
        - name: redisdata
          persistentVolumeClaim:
            claimName: redis-pvc
