k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smart-home-service
spec:
  selector:
    app: smart-home-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
