k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shas-postgres
spec:
  selector:
    app: shas-postgres
  ports:
    - port: 5432
      targetPort: 5432
