k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shas-redis
spec:
  selector:
    app: shas-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
